--- a/view/partials/software/category.html
+++ b/view/partials/software/category.html
@@ -45,6 +45,6 @@
 				<input type="text" ng-model="selectedCategory.nameGenerator.value" id="nameGenerator" class="form-control"/>
 			</div>
 		</div>
-		<button id="addCategory" ng-click="validCategoryBtn()" class="btn btn-default pull-right">{{ 'BTN_VALID_CATEGORY' | translate}}</button>
+		<button id="addCategory" ng-click="validBtn()" class="btn btn-default pull-right">{{ 'BTN_VALID' | translate}}</button>
 	</div>
 </div>
