--- a/view/partials/software/need.html
+++ b/view/partials/software/need.html
@@ -10,6 +10,6 @@
 			</div>
 		</div>
 		
-		<button id="addCategory" ng-click="validBtn()" class="btn btn-default pull-right">{{ 'BTN_VALID' | translate}}</button>
+		<button id="valid" ng-click="validBtn()" class="btn btn-default pull-right">{{ 'BTN_VALID' | translate}}</button>
 	</div>
 </div>
