--- a/view/partials/software.html
+++ b/view/partials/software.html
@@ -77,6 +77,17 @@
 				</ul>
 			</div>
 		</div>
+		<div class="row">
+			<label class="col-lg-2 control-label" for="features">{{ selectedSoftware.features.description | translate}}</label>
+			<div class="col-lg-8">
+				<button id="addFeature" ng-click="addFeatureBtn()" class="btn btn-default">{{ 'BTN_ADD_FEATURE' | translate}}</button>
+				<ul>
+					<li ng-repeat="(index, feat) in selectedSoftware.features.value">
+						<a ng-click="selectFeature($index)" href="">{{feat.feature.value.name.value}}</a>
+					</li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </div>
 <div class="col-lg-6">
@@ -90,6 +101,11 @@
 		<div ng-switch="selectedNeed != undefined">
 			<div ng-switch-when="true">
 				<div ng-include="'view/partials/software/need.html'">
+				</div>
+			</div>
+		<div ng-switch="selectedFeature != undefined">
+			<div ng-switch-when="true">
+				<div ng-include="'view/partials/software/feature.html'">
 				</div>
 			</div>
 		</div>
