ajout des fonctions de suppression

--- a/view/partials/software/category.html
+++ b/view/partials/software/category.html
@@ -52,5 +52,6 @@
 			</div>
 		</div>
 		<button id="valid" ng-click="validBtn()" class="btn btn-default pull-right">{{ 'BTN_VALID' | translate}}</button>
+		<button id="remove" ng-click="removeCategoryBtn()" class="btn btn-default pull-right">{{ 'BTN_DELETE' | translate}}</button>
 	</div>
 </div>
