--- a/view/partials/software/feature.html
+++ b/view/partials/software/feature.html
@@ -106,5 +106,6 @@
 			</div>
 		</div>
 		<button id="valid" ng-click="validBtn()" class="btn btn-default pull-right">{{ 'BTN_VALID' | translate}}</button>
+			<button id="valid" ng-click="removeFeatureBtn()" class="btn btn-default pull-right">{{ 'BTN_DELETE' | translate}}</button>
 	</div>
 </div>
