--- a/view/partials/software/dependency.html
+++ b/view/partials/software/dependency.html
@@ -15,5 +15,6 @@
 				<input type="text" ng-model="selectedDependency.dependency.xmlAttributeValue" id="soft" class="form-control"/>
 			</div>
 		</div>
+		<button id="valid" ng-click="removeDependencyBtn()" class="btn btn-default pull-left">{{ 'BTN_DELETE' | translate}}</button>
 	</div>
 </div>
