--- a/view/partials/software/need.html
+++ b/view/partials/software/need.html
@@ -11,5 +11,6 @@
 		</div>
 		
 		<button id="valid" ng-click="validBtn()" class="btn btn-default pull-right">{{ 'BTN_VALID' | translate}}</button>
+		<button id="valid" ng-click="removeNeedBtn()" class="btn btn-default pull-right">{{ 'BTN_DELETE' | translate}}</button>
 	</div>
 </div>
